--- a/calculator.html
+++ b/calculator.html
@@ -7,6 +7,12 @@
 		num.value = Math.pow(num.value, 3);
 	}
 
+	function powerOfFour(){
+		var num   = document.getElementById("n1");
+		num.value = Math.pow(num.value, 4);
+	}
+
+
 </script>
 </head>
 <body>
@@ -15,5 +21,6 @@
   <input type="text" id="n1"><p>
 
   <button onclick="cube()"> x^3 </button>
+  <button onclick="powerOfFour()"> x^4 </button>
 </body>
 </html>
